[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Sprite1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Minigames/Bomberman/Bomberboi.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Minigames/Bomberman/Areabomb.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Minigames/Bomberman/NormalBomb.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Nueva Animaci贸n"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 104.355, 54.4528 )

[sub_resource type="Animation" id=3]
resource_name = "Nueva Animaci贸n"
tracks/0/type = "value"
tracks/0/path = NodePath(".:aceleration")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1800, 3600 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:max_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1200, 2400 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Legs/Wheels:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpeedAnim/Boots:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpeedAnim/Boots:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -153, -51 ), Vector2( -25, -51 ) ]
}

[node name="Bomberboi" type="KinematicBody2D"]
position = Vector2( 610, 215 )
script = ExtResource( 2 )
bomb = ExtResource( 3 )
bombcross = ExtResource( 4 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )

[node name="Head" type="Sprite" parent="Body"]
scale = Vector2( 1.25, 1 )

[node name="Head2" type="Sprite" parent="Body/Head"]
texture = ExtResource( 1 )

[node name="Head4" type="Sprite" parent="Body/Head"]
position = Vector2( 0, -6 )
scale = Vector2( 0.5, 0.75 )
texture = ExtResource( 1 )

[node name="Head6" type="Sprite" parent="Body/Head"]
position = Vector2( 9.06665, -13.3333 )
scale = Vector2( 0.15, 0.75 )
texture = ExtResource( 1 )

[node name="Head7" type="Sprite" parent="Body/Head"]
position = Vector2( 10.1332, -24.0001 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Head5" type="Sprite" parent="Body/Head"]
position = Vector2( 0, 7 )
scale = Vector2( 0.5, 0.75 )
texture = ExtResource( 1 )

[node name="Head3" type="Sprite" parent="Body/Head"]
scale = Vector2( 1.25, 0.75 )
texture = ExtResource( 1 )

[node name="Body" type="Sprite" parent="Body"]
position = Vector2( 0, 3.99998 )
scale = Vector2( 1, 0.75 )

[node name="Body2" type="Sprite" parent="Body/Body"]
position = Vector2( 0, 41 )
scale = Vector2( 1.25, 2 )
texture = ExtResource( 1 )

[node name="Body3" type="Sprite" parent="Body/Body"]
position = Vector2( 0, 41 )
scale = Vector2( 1.5, 1.75 )
texture = ExtResource( 1 )

[node name="Arms" type="Sprite" parent="Body"]
position = Vector2( 0, -7.33334 )

[node name="Left" type="Sprite" parent="Body/Arms"]
position = Vector2( -11.1231, 34 )
scale = Vector2( 0.987, 0.25 )
texture = ExtResource( 1 )

[node name="Left2" type="Sprite" parent="Body/Arms/Left"]
position = Vector2( -12.8395, 12.5 )
scale = Vector2( 0.25, 2 )
texture = ExtResource( 1 )

[node name="Left3" type="Sprite" parent="Body/Arms/Left"]
position = Vector2( -13.5149, 36.5 )
scale = Vector2( 0.35, 1 )
texture = ExtResource( 1 )

[node name="Right" type="Sprite" parent="Body/Arms"]
position = Vector2( 11.6667, 34 )
scale = Vector2( 1, 0.25 )
texture = ExtResource( 1 )

[node name="Left2" type="Sprite" parent="Body/Arms/Right"]
position = Vector2( 13.1605, 12.5 )
scale = Vector2( 0.25, 2 )
texture = ExtResource( 1 )

[node name="Left3" type="Sprite" parent="Body/Arms/Right"]
position = Vector2( 13.515, 36.5 )
scale = Vector2( 0.35, 1 )
texture = ExtResource( 1 )

[node name="Legs" type="Sprite" parent="Body"]
position = Vector2( 0, -16.6667 )

[node name="Left" type="Sprite" parent="Body/Legs"]
position = Vector2( -8, 66 )
scale = Vector2( 0.4, 1 )
texture = ExtResource( 1 )

[node name="Right3" type="Sprite" parent="Body/Legs/Left"]
position = Vector2( -2.5, 15.6667 )
scale = Vector2( 1.25, 0.313 )
texture = ExtResource( 1 )

[node name="Right4" type="Sprite" parent="Body/Legs/Left"]
position = Vector2( -5, 15.6667 )
scale = Vector2( 1.25, 0.25 )
texture = ExtResource( 1 )

[node name="Right" type="Sprite" parent="Body/Legs"]
position = Vector2( 8, 66 )
scale = Vector2( 0.4, 1 )
texture = ExtResource( 1 )

[node name="Right3" type="Sprite" parent="Body/Legs/Right"]
position = Vector2( -2.5, 15.6667 )
scale = Vector2( 1.25, 0.313 )
texture = ExtResource( 1 )

[node name="Right4" type="Sprite" parent="Body/Legs/Right"]
position = Vector2( -5, 15.6667 )
scale = Vector2( 1.25, 0.25 )
texture = ExtResource( 1 )

[node name="Wheels" type="Sprite" parent="Body/Legs"]
visible = false

[node name="Right5" type="Sprite" parent="Body/Legs/Wheels"]
position = Vector2( -12, 87.6666 )
scale = Vector2( 0.1, 0.095 )
texture = ExtResource( 1 )

[node name="Right6" type="Sprite" parent="Body/Legs/Wheels"]
position = Vector2( -7.33359, 87.6666 )
scale = Vector2( 0.1, 0.095 )
texture = ExtResource( 1 )

[node name="Right7" type="Sprite" parent="Body/Legs/Wheels"]
position = Vector2( 5.33301, 87.6666 )
scale = Vector2( 0.1, 0.095 )
texture = ExtResource( 1 )

[node name="Right8" type="Sprite" parent="Body/Legs/Wheels"]
position = Vector2( 9.99969, 87.6666 )
scale = Vector2( 0.1, 0.095 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -23.4031, 24.032, -23.5271, 27.6367, -28.0994, 27.5841, -28.1636, 35.3763, -40.2415, 35.3019, -40.3158, 44.7412, -28.1636, 44.6298, -28.2351, 76.5393, -23.4, 76.6444, -19.7732, 79.8864, -20.0789, 103.14, -4.58423, 103.14, -4.58423, 79.9642, 4.55365, 80.0966, 4.6861, 103.405, 19.3861, 103.537, 19.6046, 80.2202, 23.6902, 76.5393, 27.9999, 76.4342, 28.2876, 44.8005, 41.811, 44.6237, 41.811, 35.3429, 28.1992, 35.2545, 28.2103, 27.5796, 23.5331, 27.5239, 23.4774, 24.016, 11.7443, 23.9803, 11.8145, 18.7889, 23.1381, 18.7574, 23.4531, -18.4103, -23.3215, -18.5678, -23.164, 18.7574, -11.7573, 18.7889, -11.7573, 23.9101 )

[node name="HitArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="HitArea"]
polygon = PoolVector2Array( -23.4031, 24.032, -23.5271, 27.6367, -28.0994, 27.5841, -28.1636, 35.3763, -40.2415, 35.3019, -40.3158, 44.7412, -28.1636, 44.6298, -28.2351, 76.5393, -23.4, 76.6444, -19.7732, 79.8864, -20.0789, 103.14, -4.58423, 103.14, -4.58423, 79.9642, 4.55365, 80.0966, 4.6861, 103.405, 19.3861, 103.537, 19.6046, 80.2202, 23.6902, 76.5393, 27.9999, 76.4342, 28.2876, 44.8005, 41.811, 44.6237, 41.811, 35.3429, 28.1992, 35.2545, 28.2103, 27.5796, 23.5331, 27.5239, 23.4774, 24.016, 11.7443, 23.9803, 11.8145, 18.7889, 23.1381, 18.7574, 23.4531, -18.4103, -23.3215, -18.5678, -23.164, 18.7574, -11.7573, 18.7889, -11.7573, 23.9101 )

[node name="Inmunity" type="AnimationPlayer" parent="."]
"anims/Nueva Animaci贸n" = SubResource( 1 )

[node name="IT" type="Timer" parent="."]
one_shot = true

[node name="UParea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="UParea"]
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="UParea"]
enabled = true
cast_to = Vector2( 0, -60 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="DownArea" type="Area2D" parent="."]
position = Vector2( 0, 71 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownArea"]
position = Vector2( 0, 23 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="DownArea"]
enabled = true
cast_to = Vector2( 0, 60 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="Bombtimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="SpeedAnim" type="AnimationPlayer" parent="."]
"anims/Nueva Animaci贸n" = SubResource( 3 )

[node name="Boots" type="Sprite" parent="SpeedAnim"]
visible = false
position = Vector2( -153, -51 )

[node name="Right9" type="Sprite" parent="SpeedAnim/Boots"]
position = Vector2( 640, 321.5 )
scale = Vector2( 0.15, 0.1425 )
texture = ExtResource( 1 )

[node name="Right10" type="Sprite" parent="SpeedAnim/Boots"]
position = Vector2( 647, 321.5 )
scale = Vector2( 0.15, 0.1425 )
texture = ExtResource( 1 )

[node name="Right5" type="Sprite" parent="SpeedAnim/Boots"]
position = Vector2( 642.5, 312.5 )
scale = Vector2( 0.75, 0.4695 )
texture = ExtResource( 1 )

[node name="Right6" type="Sprite" parent="SpeedAnim/Boots"]
position = Vector2( 641, 312.5 )
scale = Vector2( 0.75, 0.375 )
texture = ExtResource( 1 )

[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="timeout" from="IT" to="." method="_on_IT_timeout"]
[connection signal="area_entered" from="UParea" to="." method="_on_UParea_area_entered"]
[connection signal="area_exited" from="UParea" to="." method="_on_UParea_area_exited"]
[connection signal="area_entered" from="DownArea" to="." method="_on_DownArea_area_entered"]
[connection signal="area_exited" from="DownArea" to="." method="_on_DownArea_area_exited"]
[connection signal="timeout" from="Bombtimer" to="." method="_on_Bombtimer_timeout"]
[connection signal="animation_finished" from="SpeedAnim" to="." method="_on_SpeedAnim_animation_finished"]
